Fix visible overflow on edge, firefox

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -86,7 +86,6 @@
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
 .gallery-table {
-    display: table;
 	overflow: hidden;
 	position: relative;
 	width: 100%;
